// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly renders correctly accessibility props 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={true}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly an icon 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly square avatar 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text l3-style-avatar_circle--is-square"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with badges 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
  <div
    className="l3-style-avatar_badges"
  >
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with damaged src badges 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
  <div
    className="l3-style-avatar_badges"
  >
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="l3-style-avatar_badge l3-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with empty props 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={Object {}}
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image and text 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={Object {}}
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    >
      Name
    </span>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with not valid image 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={Object {}}
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with text 1`] = `
<div
  className="l3-style-avatar l3-style-avatar--large"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="l3-style-avatar_circle l3-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={0}
  >
    <span
      className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
    />
  </div>
</div>
`;
